--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.13.1",
+    "@aws-sdk/client-cognito-identity-provider": "^3.839.0",
+    "@tailwindcss/vite": "^4.1.11",
     "aws-amplify": "^6.15.1",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
   },
   "devDependencies": {
