--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "tailwindcss": "^4.1.11",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
