fix: Remove default values for CLIENT_ID, REGION, and clientSecret in cognito-login.vue and update static.yml to include environment variables for build process.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,10 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+        env:
+          VITE_CLIENT_SECRET: ${{ secrets.VITE_CLIENT_SECRET }}
+          VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
+          VITE_REGION: ${{ secrets.VITE_REGION }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
