--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
+    "jsonwebtoken": "^9.0.2",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
